removed stuff, added default ad sending to unknown users

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Sagy Grimberg & Ronen Pinhasov",
   "license": "ISC",
   "dependencies": {
+    "agenda": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
